# Mad-RHI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
Examples/: CMakeLists.txt
Examples/Common/: CMakeLists.txt
Examples/Common/include/Common/: BootStrap.h  Camera.h  Event.h  RenderGraph.h  ShaderCompiler.h  ShaderSystem.h  Window.h
Examples/Common/src/Common/: BootStrap.cpp  Camera.cpp  Event.cpp  RenderGraph.cpp  ShaderCompiler.cpp  ShaderSystem.cpp  Window.cpp
Examples/ExponentialFog/: CMakeLists.txt
Examples/ExponentialFog/shaders/: Fragment.slang  Vertex.slang
Examples/ExponentialFog/src/: main.cpp
Examples/GodRays/: CMakeLists.txt
Examples/GodRays/shaders/: ColorVertex.slang  CompositePixel.slang  GodRaysPixel.slang
Examples/GodRays/src/: main.cpp
Examples/Godray/: CMakeLists.txt
Examples/Godray/shaders/: ColorPixel.slang  CompositePixel.slang  GodrayPixel.slang  ShadowMapVertex.slang
Examples/Godray/src/: main.cpp
Examples/PBR/: CMakeLists.txt
Examples/PBR/src/: main.cpp
Examples/RayMarchingShadowMap/: CMakeLists.txt
Examples/RayMarchingShadowMap/shaders/: ColorVertex.slang  CompositePixel.slang  CompositeVertex.slang  GodraysPixel.slang
Examples/RayMarchingShadowMap/src/: main.cpp
Examples/Shadows/: CMakeLists.txt
Examples/Shadows/shaders/: ColorPassPixel.slang  ColorPassVertex.slang  ShadowPassVertex.slang
Examples/Shadows/src/: main.cpp
Examples/Triangle/: CMakeLists.txt
Examples/Triangle/shaders/: Fragment.slang  Vertex.slang
Examples/Triangle/src/: main.cpp
Examples/src/Examples/: Window.cpp  Window.h
Examples/src/Examples/Triangle/: main.cpp
RHI/: CMakeLists.txt
RHI/include/Mad-RHI/: CommandList.h  CommandQueue.h  Common.h  Device.h  Factory.h  Fence.h  PipelineState.h  Resource.h  Swapchain.h
RHI/src/Mad-RHI/: Common.cpp  Device.cpp  Factory.cpp  Fence.h
RHI/src/Mad-RHI/Backend/DX12/: DX12CommandQueue.cpp  DX12CommandQueue.h  DX12Device.cpp  DX12Device.h  DX12Factory.cpp  DX12Factory.h  DX12Fence.cpp  DX12Fence.h  DX12PipelineState.cpp  DX12PipelineState.h  DX12Resource.cpp  DX12Resource.h  DX12Swapchain.cpp  DX12Swapchain.h
RHI/src/Mad-RHI/Backend/DX12/Dx/: CommandListPool.cpp  CommandListPool.h  ReleaseManager.cpp  ReleaseManager.h  RingAllocator.cpp  RingAllocator.h
RHI/src/Mad-RHI/Backend/Vulkan/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandQueue.cpp  VulkanCommandQueue.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFactory.cpp  VulkanFactory.h  VulkanFence.cpp  VulkanFence.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanResource.cpp  VulkanResource.h  VulkanSwapchain.cpp  VulkanSwapchain.h
RHI/src/Mad-RHI/Backend/Vulkan/Vk/: CommandListPool.cpp  CommandListPool.h  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  DescriptorSetCache.cpp  DescriptorSetCache.h  DescriptorState.cpp  DescriptorState.h  PendingDescriptorState.cpp  PendingDescriptorState.h  ReleaseManager.cpp  ReleaseManager.h  ReleaseQueue.cpp  ReleaseQueue.h  RingAllocator.cpp  RingAllocator.h  SyncAllocator.cpp  SyncAllocator.h
res/shaders/: Constants.slang  DataStructures.slang  FullScreenQuadVertex.slang  Geometry.slang
res/shaders/ExponentialFog/: Fragment.slang  Vertex.slang
res/shaders/GodRays/: ColorPixel.slang  ColorVertex.slang  GodRaysPixel.slang  ShadowMapVertex.slang
res/shaders/Shadows/: ColorPassPixel.slang  ColorPassVertex.slang  ShadowPassVertex.slang
res/shaders/Triangle/: Vertex.slang
